<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/empty_state_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_message_black_48dp"
        android:tint="@color/secondary_text" />

    <TextView
        android:id="@+id/empty_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_state"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/secondary_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty_space" />

</LinearLayout>
